--- a/style.css
+++ b/style.css
@@ -27,24 +27,140 @@
     height: 100vh;
     grid-template-rows: 20% auto 5%;
 }
+button {
+    border: none;
+    outline: none;
+    border-style: none;
+    background: none;
+    border-radius: 10%;
+}
 
+.headerTitle {
+    font-size: 36px;
+    font-weight: bold;
+    margin-right: -235px;
+}
+.plus-btn {
+    font-size: 60px;
+    font-weight: 200;
+    width: 60px;
+    height: 70px;
+    align-self: center;
+    text-align: center;
+}
+button:hover {
+    background-color: rgba(0,0,0,0.2);
+}   
+button:active {
+    background-color: rgba(0,0,0,0.5);
+}
+.wrapper {
+    width: min(100%);
+    height: min(fit-content, 100%);
+    overflow: auto;
+    padding-bottom: 0;
+}
 .header {
     background-color: orange;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 25px;
+    align-items: center;
 }
 .main {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 10px;
+    padding: 10px 40px;
+    grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
 }
 
-.grid-item {
+.book-card {
+    display:grid;
     border: 2px solid orange;
+    height: 250px;
+    grid-template-rows: 2fr 2fr 3fr;
+    text-align: center;
+}
+
+.card-buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.card-buttons button:hover {
+    background: rgba(0,0,0,0.2);
+    border-radius: 0;
 }
 
 .footer {
-    background-color: blue;
+    position: static;
+    width: 100%;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.footer button:hover {
+    background: none;
+    transform: scale(1.1);
 }
 
 img {
     width: 50px;
     height: 50px;
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
