--- a/style.css
+++ b/style.css
@@ -26,10 +26,7 @@
     font-size: 20px;
     font-weight: 500;
     font-family: 'Roboto', sans-serif;
-    -webkit-transition: -moz-transform .3s ease-out; 
-   -moz-transition: -webkit-transform .3s ease-out; 
-   -o-transition: -o-transform .3s ease-out; 
-    transition: transform .3s ease-out; 
+    transition: all var(--transition-time) ease-in-out;
 }
 
 body {
@@ -37,11 +34,32 @@ body {
     grid-template-rows: 20% fit-content;
     width: min(100%);
     height: min(fit-content, 100%);
-    overflow: auto;
+    overflow:auto;
     padding-bottom: 0;
     display: grid;
-    grid-template-rows: 20vh minmax(70vh, fit-content) 10vh;
+    grid-template-rows: 20vh minmax(70vh, fit-content);
 }
+
+.form-background {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.form {
+    padding: 5% 15%;
+    width: 30vw;
+    height: 60vh;
+    background-color: green;
+}
+
+
 button {
     border: none;
     outline: none;
@@ -64,6 +82,15 @@ button {
     align-self: center;
     text-align: center;
 }
+
+.plus-btn:hover {
+    transform: scale(1.1);
+}
+
+.log-in-btn {
+    padding: 5px 10px
+}
+    
 button:hover {
     background-color: rgba(0,0,0,0.2);
 }   
@@ -76,15 +103,15 @@ button:active {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0 25px;
+    padding: 15px 25px;
     align-items: center;
+    grid-row: 1/1;
 }
 .main {
     display: grid;
-    overflow:scroll;
     gap: 10px;
     padding: 20px 40px;
-    overflow-x: hidden;
+    overflow: hidden;
     grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
 }
 
@@ -95,7 +122,7 @@ button:active {
     height: 250px;
     grid-template-rows: 2fr 2fr 3fr;
     text-align: center;
-    transition: all var(--transition-time);
+    transition: all var(--transition-time) ease-in-out;
 }
 
 .book-card:hover {
@@ -165,13 +192,14 @@ button:active {
     background-color: rgba(230,20,20,0.8);
 }
 
+.delete-book-btn * {
+    pointer-events: none;
+    transition: transform var(--transition-time) ease;
+}
 .delete-book-btn.clicked span {
     transform: scale(1.50)
 }
 
-.delete-book-btn * {
-    pointer-events: none;
-}
 
 .card-buttons {
     display: grid;
