--- a/style.css
+++ b/style.css
@@ -41,23 +41,32 @@ body {
 }
 
 .form-background {
+    opacity: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
-    pointer-events: none;
     z-index: 1;
     background-color: rgba(0,0,0,0.4);
+    transition: all 300ms ease-in-out;
+    pointer-events: none;
 }
-
 .form {
+    opacity: 0;
+    pointer-events: none;
     padding: 5% 15%;
     width: 30vw;
     height: 60vh;
     background-color: green;
 }
+
+.active {
+    opacity: 1;
+    pointer-events:all;
+}
+
 
 
 button {
