--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
     transition: all 300ms ease-in-out;
     pointer-events: none;
 }
-.form {
+.form-wrapper {
     opacity: 0;
     padding: 3% 3%;
     pointer-events: none;
@@ -64,7 +64,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
 }
-#form {
+#addBook-form {
     width:100%;
     height:100%;
     display: flex;
@@ -73,31 +73,31 @@ body {
     align-items: center;
 }
 
-#form ::placeholder{
+#addBook-form ::placeholder{
     font-size: 16px;
     opacity: 0.8;
     padding-left: 3px;
 }
 
-#form span {
+#addBook-form span {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 15px;
 }
 
-#form label[for='wasRead'] {
+#addBook-form label[for='wasRead'] {
     display:flex;
     gap: 50px;
     
 }
-#form input[type="checkbox"] {
+#addBook-form input[type="checkbox"] {
     transform: scale(2.5);
     transition: all 0.2s ease-in-out;
     cursor: pointer;
 }
 
-#form button[type=submit] {
+#addBook-form button[type=submit] {
     border: 1px solid black;
     border-radius: 10px;
     padding: 5px 4px;
@@ -105,13 +105,13 @@ body {
     background-color: white;
 }
 
-#form button[type=submit]:hover {
+#addBook-form button[type=submit]:hover {
     background-color: rgba(0,0,0, 0.7);
     color: white;
     transform: scale(1.05)
 }
 
-#form button[type=submit]:active {
+#addBook-form button[type=submit]:active {
     background-color: white;
     color: black;
     transform: scale(0.95)
