--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ button:active {
 
 
 .book-card .title {
-    padding-top: 20px;
+    padding-top: 40px;
 }
 
 .book-card .title::before {
@@ -215,7 +215,9 @@ button:active {
 }
 
 .book-card .author {
-    padding-top: 10px;
+    padding-top: 15px;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .read {
