--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ button {
     font-weight: 200;
     width: 60px;
     height: 70px;
+    margin-left: 2%;
     align-self: center;
     text-align: center;
 }
@@ -334,4 +335,52 @@ button:active {
 img {
     width: 30px;
     height: auto;
+}
+
+
+
+.arrow {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transform: rotate(180deg);
+}
+
+.arrow span {
+    display: block;
+    width: 4vw;
+    height: 4vw;
+    border-bottom: 5px solid rgb(0, 0, 0);
+    border-right: 5px solid rgb(0, 0, 0);
+    transform: rotate(45deg);
+    margin: -10px;
+    border-color: rgba(255,165,0,0.6);
+    animation: animate 2s infinite;
+    position: absolute;
+
+}
+
+.arrow span:nth-child(2) {
+    animation-delay: -0.2s;
+    position: absolute;
+    bottom: 15%;
+}
+
+.arrow span:nth-child(3) {
+    animation-delay: -0.4s;
+    position: absolute;
+    bottom: 30%;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 0;
+    }
+    80% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
