--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
     --read-background-color: rgba(153, 220, 153, 1);
     --read-background-color-strong: rgba(170, 250, 170, 1);
     --checkbox-font-color: rgba(0,0,0,9);
+    --arrow-animation-time: 1800ms;
+    --arrow-animation-delay: calc(var(--arrow-animation-time) / 10);
 }
 
 * {
@@ -59,12 +61,22 @@ body {
     align-items: center;
     justify-content: center;
     transition: all 0.2s ease-in-out;
-    background-color: rgba(255,155,0,1);
+    background-color: rgba(249, 191, 59, 0.34);
     border-radius: 10px;
     border: 1px solid rgba(0,0,0,0.4);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
 }
+
+.form-wrapper {
+    color: black;
+}
+
+.form-wrapper input[type=text] {
+    border-radius: 5px;
+    padding: 2px 1px;
+}
+
 #addBook-form {
     width:100%;
     height:100%;
@@ -171,7 +183,7 @@ button {
     font-weight: 200;
     width: 60px;
     height: 70px;
-    margin-left: 2%;
+    margin-left: 3%;
     align-self: center;
     text-align: center;
 }
@@ -199,6 +211,7 @@ button:active {
     padding: 15px 25px;
     align-items: center;
     grid-row: 1/1;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 .main {
     display: grid;
@@ -341,10 +354,15 @@ img {
 
 .arrow {
     position: absolute;
-    top: 35%;
-    left: 50%;
+    top: 25%;
+    left: 48%;
     transform: translate(-50%, -50%);
+    transform: scale(5);
     transform: rotate(180deg);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    
 }
 
 .arrow span {
@@ -355,29 +373,26 @@ img {
     border-right: 5px solid rgb(0, 0, 0);
     transform: rotate(45deg);
     margin: -10px;
+    animation: animate var(--arrow-animation-time) infinite;
+    position:static;
     border-color: rgba(255,165,0,0.6);
-    animation: animate 2s infinite;
-    position: absolute;
-
+    border-color: rgba(0,0,0,0.7)
 }
 
 .arrow span:nth-child(2) {
-    animation-delay: -0.2s;
-    position: absolute;
-    bottom: 15%;
+    animation-delay: var(--arrow-animation-delay);
 }
 
 .arrow span:nth-child(3) {
-    animation-delay: -0.4s;
-    position: absolute;
-    bottom: 30%;
+    animation-delay: calc(2 * var(--arrow-animation-delay));
+
 }
 
 @keyframes animate {
     0% {
         opacity: 0;
     }
-    80% {
+    30% {
         opacity: 1;
     }
     100% {
