--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     align-items: center;
     justify-content: center;
     transition: all 0.2s ease-in-out;
-    background-color: rgba(249, 191, 59, 0.34);
+    background-color: rgba(227, 169, 34, 0.664);
     border-radius: 10px;
     border: 1px solid rgba(0,0,0,0.4);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -188,6 +188,23 @@ button {
     text-align: center;
 }
 
+.animate-bg {
+    animation: anim var(--arrow-animation-time) infinite;
+}
+
+@keyframes anim {
+    0% {
+        background-color: none;
+    }
+
+    50% {
+        background-color: rgba(0,0,0,0.4);
+    }
+    100% {
+        background-color: none;
+    }
+}
+
 .plus-btn:hover {
     transform: scale(1.1);
 }
@@ -211,12 +228,14 @@ button:active {
     padding: 15px 25px;
     align-items: center;
     grid-row: 1/1;
+    height: 15vh;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 .main {
     display: grid;
     gap: 10px;
     padding: 20px 40px;
+    min-height: 85vh;
     overflow: hidden;
     grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
 }
@@ -351,30 +370,32 @@ img {
 }
 
 
-
 .arrow {
     position: absolute;
     top: 25%;
-    left: 48%;
+    left: 47%;
     transform: translate(-50%, -50%);
     transform: scale(5);
-    transform: rotate(180deg);
+    transform: rotate(180deg);  
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 10px;
     
 }
 
 .arrow span {
     display: block;
-    width: 4vw;
-    height: 4vw;
+    width: 6vw;
+    height: 6vw;
     border-bottom: 5px solid rgb(0, 0, 0);
     border-right: 5px solid rgb(0, 0, 0);
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 5px;
     transform: rotate(45deg);
     margin: -10px;
     animation: animate var(--arrow-animation-time) infinite;
-    position:static;
+    position: static;
     border-color: rgba(255,165,0,0.6);
     border-color: rgba(0,0,0,0.7)
 }
